--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "cache-manager-redis-yet": "^4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "csvtojson": "^2.0.10",
     "dayjs": "^1.11.10",
     "ethers": "^6.10.0",
     "fastify": "^4.25.2",
+    "json2csv": "6.0.0-alpha.2",
     "redis": "^4.6.12",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
