--- a/package.json
+++ b/package.json
@@ -20,18 +20,25 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.2.0",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/platform-fastify": "^10.3.0",
     "@prisma/client": "5.8.0",
+    "cache-manager": "^5.3.2",
+    "cache-manager-redis-store": "^3.0.1",
+    "cache-manager-redis-yet": "^4.1.2",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "crypto": "^1.0.1",
+    "class-validator": "^0.14.1",
+    "dayjs": "^1.11.10",
+    "ethers": "^6.10.0",
     "fastify": "^4.25.2",
+    "redis": "^4.6.12",
     "reflect-metadata": "^0.1.14",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "web3-eth-accounts": "^4.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
@@ -40,6 +47,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.0",
+    "@types/redis": "^4.0.11",
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
@@ -47,9 +55,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.2",
     "prisma": "^5.8.0",
-    "run-script-webpack-plugin": "^0.2.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
@@ -57,9 +64,7 @@
     "ts-node": "^10.9.2",
     "ts-standard": "^12.0.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.3.3",
-    "webpack": "^5.89.0",
-    "webpack-node-externals": "^3.0.0"
+    "typescript": "^5.3.3"
   },
   "jest": {
     "moduleFileExtensions": [
