--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "include": [
+    "src/index.d.ts",
     "src/*.ts",
     "src/**/*.ts",
+    "src/**/**/**/*.ts"
   ],
   "compilerOptions": {
     "module": "commonjs",
