--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "csvtojson": "^2.0.10",
     "dayjs": "^1.11.10",
     "ethers": "^6.10.0",
+    "exceljs": "^4.4.0",
     "fastify": "^4.25.2",
     "json2csv": "6.0.0-alpha.2",
     "redis": "^4.6.12",
