--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "ethers": "^6.10.0",
     "exceljs": "^4.4.0",
     "fastify": "^4.25.2",
+    "firebase-admin": "^12.0.0",
+    "http": "^0.0.1-security",
     "json2csv": "6.0.0-alpha.2",
     "redis": "^4.6.12",
     "reflect-metadata": "^0.1.14",
