--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "firebase-admin": "^12.0.0",
     "http": "^0.0.1-security",
     "json2csv": "6.0.0-alpha.2",
-    "pinyin": "^4.0.0-alpha.0",
+    "pinyin-pro": "^3.20.2",
     "redis": "^4.6.12",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
